# mcp-variance-log

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  varlog.db
src/mcp_variance_log/: __init__.py  db_utils.py  server.py
